--- a/LearnPySpark.ipynb
+++ b/LearnPySpark.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "id": "d2524a71-64e0-47dd-bb90-158768b2c323",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 166,
    "id": "fa8d8842-eace-4ebf-a293-2cc1d5b16439",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "id": "5a277927-30df-4744-bf26-43059a088504",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "id": "dd4dc0f9-1fae-43e6-979c-a3e62a393c5e",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
        "              <dt>Master</dt>\n",
        "                <dd><code>local[*]</code></dd>\n",
        "              <dt>AppName</dt>\n",
-       "                <dd><code>Datafram</code></dd>\n",
+       "                <dd><code>Dataframe</code></dd>\n",
        "            </dl>\n",
        "        </div>\n",
        "        \n",
@@ -79,10 +79,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x18bc09dbaa0>"
+       "<pyspark.sql.session.SparkSession at 0x14fff224b30>"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "id": "cb38fc93-328a-48d9-9cc9-d9b4aa356fd0",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "id": "bec3a312-3341-458b-8beb-b78017917873",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "DataFrame[_c0: string, _c1: string, _c2: string, _c3: string, _c4: string, _c5: string]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
